--- a/nginx-web-server/deployment.yaml
+++ b/nginx-web-server/deployment.yaml
@@ -16,10 +16,11 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx-container
-        image: nginx:latest
-        ports:
-        - containerPort: 80
+        - name: nginx-container
+          image: nginx:latest
+          ports:
+            - name: web
+              containerPort: 80
 
 ---
 # service
@@ -32,9 +33,9 @@ spec:
   selector:
     app: nginx
   ports:
-  - name: http
-    port: 80
-    targetPort: 80
+    - name: web
+      port: 80
+      targetPort: web
 
 ---
 # ingress
@@ -43,17 +44,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
-  - host: localk8s.com
-    http:
+  - http:
       paths:
-      - path: /nginx(/|$)(.*)
+      - path: /nginx
         pathType: Prefix
         backend:
           service:
             name: nginx-service
             port:
-              name: http
+              name: web
