--- a/whoami-app/deployment.yaml
+++ b/whoami-app/deployment.yaml
@@ -4,9 +4,8 @@ metadata:
   name: whoami
   labels:
     app: whoami
-
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: whoami
@@ -27,13 +26,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: whoami
-
 spec:
   ports:
     - name: web
       port: 80
       targetPort: web
-
   selector:
     app: whoami
 
@@ -46,7 +43,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /whoami
         pathType: Prefix
         backend:
           service:
