--- a/whoami-app/deployment.yaml
+++ b/whoami-app/deployment.yaml
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: whoami
+  name: whoami-service
 spec:
   ports:
     - name: web
@@ -47,6 +47,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: whoami
+            name: whoami-service
             port:
               name: web
