--- a/nginx-web-server/deployment.yaml
+++ b/nginx-web-server/deployment.yaml
@@ -16,11 +16,10 @@ spec:
         app: nginx
     spec:
       containers:
-        - name: nginx-container
-          image: nginx:latest
-          ports:
-            - name: web
-              containerPort: 80
+      - name: nginx-container
+        image: nginx:latest
+        ports:
+        - containerPort: 80
 
 ---
 # service
@@ -33,9 +32,9 @@ spec:
   selector:
     app: nginx
   ports:
-    - name: web
-      port: 80
-      targetPort: web
+  - name: http
+    port: 80
+    targetPort: 80
 
 ---
 # ingress
@@ -44,14 +43,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
   - http:
       paths:
-      - path: /nginx
+      - path: /nginx(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: nginx-service
             port:
-              name: web
+              name: http
